# Elliptic_Curve_Crypto

./: .gitignore  Makefile  README.md  mont_red.py  pattern.py
doc/: ECC_DevNote_Main.tex
doc/appendices/: bibilography.tex
doc/chapters/: chapter2.tex  ecc_ch1.tex  ecc_ch1_add_sub.tex  ecc_ch1_mul.tex  ecc_ch1_mul_squ.tex  ecc_ch1_red.tex
docs/: ECC_DevNote_Main.tex
docs/chapters/: chapter1.tex  ecc_ch1.tex
include/: bigint_utils.h  ecc_config.h  secp256k1_bigint.h  secp256k1_config.h  secp256k1_utils.h  secp256r1_bigint.h  secp256r1_config.h  secp256r1_utils.h  secp256r1_validation.h
secp256r1_rust/: Cargo.toml
secp256r1_rust/src/: main.rs
secp256r1_rust/src/arithmetic/: bignumber_config.rs  bignumber_utils.rs  mod.rs
src/: bigint_utils.c  main.c  secp256k1_bigint.c  secp256k1_utils.c  secp256r1_bigint.c  secp256r1_utils.c  secp256r1_validation.c
test_vector/add and sub/: TV_PFADD_TV.txt  TV_opB.txt
test_vector/add_and_sub/: TV_PFADD.txt  TV_PFSUB.txt  TV_opA.txt
test_vector/inverse/: TV_PFINV_TV.txt
test_vector/mul_and_squ/: TV_MUL.txt  TV_SQR.txt  TV_opA.txt  TV_opB.txt
test_vector/reduction/: TV_MUL_TV.txt  TV_PFMUL_TV.txt  TV_PFSQR.txt  TV_SQR.txt  TV_opA.txt  TV_opB.txt
test_vector/scalar_multiplication/: TV_SM.txt  TV_Scalar.txt
view/: measure_cycle.py  measure_cycle_single.py
